--- a/TaxiApp/TaxiApp.csproj
+++ b/TaxiApp/TaxiApp.csproj
@@ -49,11 +49,25 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Bertuzzi.MAUI.MaskedEntry" Version="1.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Entity\Orders\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Pages\RegPage.xaml.cs">
+	    <DependentUpon>RegPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Pages\RegPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
