--- a/TaxiApp/TaxiApp.csproj
+++ b/TaxiApp/TaxiApp.csproj
@@ -56,6 +56,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Entity\Orders\" />
+	  <Folder Include="Icons\" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -65,6 +66,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Pages\OrderPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\RegPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
