--- a/TaxiApp/TaxiApp.csproj
+++ b/TaxiApp/TaxiApp.csproj
@@ -49,16 +49,21 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <AndroidResource Remove="Icons\**" />
+	  <Compile Remove="Icons\**" />
+	  <EmbeddedResource Remove="Icons\**" />
+	  <MauiCss Remove="Icons\**" />
+	  <MauiXaml Remove="Icons\**" />
+	  <None Remove="Icons\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Bertuzzi.MAUI.MaskedEntry" Version="1.0.0" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.6" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Entity\Orders\" />
-	  <Folder Include="Icons\" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -68,10 +73,22 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Pages\CurrentOrderPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\OrderHistoryPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\OrderPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\RegPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\SettingPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\UserRatingPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
